# hummbl-governance

./: .coverage  .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  AUDIT.md  BRAND_GUIDELINES.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  COMMERCIAL_USE.md  CONSTITUTION.md  CONTRIBUTING.md  DOCTRINE.md  KRINEIA.md  LICENSE  MCP_SERVER_DEPRECATED.md  Makefile  NOTICE  PRIMITIVES.md  README.md  ROADMAP.md  SECURITY.md  TRADEMARK.md  api_server.py  arbiter_data.db  governance_cli.py  hummbl.repo.yaml  llms.txt  mcp_agent_monitor.py  mcp_compliance.py  mcp_identity.py  mcp_physical.py  mcp_reasoning.py  mcp_sandbox.py  mcp_server.py  package.json  post_to_bus.py  pyproject.toml  (+2 more)
.githooks/: commit-msg  pre-push
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.governance/: bus.tsv
_internal/: AAR-docs-peer-review-2026-05-30.md  CI-POSTMORTEM-2026-05-30.md  comprehensive-peer-review-kimi-k2.6-2026-05-30.md  docs-peer-review-multi-agent-2026-05-30.md
demo/: gaas_demo.ipynb
docs/: API_SPEC.md  GITEA_MIGRATION_PLAYBOOK.md  GITHUB_SURFACE_MAP_DOCTRINE.md  INTEGRATION_CANDIDATES.md  KERNEL_INTEGRATION.md  MANIFEST_POLICY_ENVELOPE_ROLLOUT.md  MAXIMALLY_PROMOTABLE_SURFACE_DOCTRINE.md  MEMORY_CIVILIZATION_REGISTRIES.md  MEMORY_SYSTEM_REGISTRY.md  OWASP_MAPPING.md  OWASP_MAPPING_PRINT.html  PRD.md  REPO_HEALTH.md  ROLLOUT_v1.1.0.md  SIGNAL_CLI_ADMISSION_POLICY.md  SIMULATION_AFFORDANCE_TEMPLATE.md  SLACK_MOBILE_COMMAND_POLICY.md  TEST_COUNT_AUTHORITY.md  TEST_FIRST_DRILL_DOWN_PROTOCOL.md  aar-20260530-setup-python-ci-fix.md  compliance-calendar.md  cross-repo-contract-standard-v0.1.md  evidence-readiness-review-receipt.md  gdpr-mapping.md  index.md  iso27001-mapping.md  memory_system_registry.candidate.json  memory_system_registry.schema.json  nist-csf-mapping.md  nist-rmf-mapping.md  nosec-registry.json  public-claims.md  public-private-boundary.md  receipts.md  soc2-mapping.md  source-candidate-policy.md  verify-confidence.md
examples/: agent_runner.py  autogen_integration.py  circuit_breaker_wrap.py  crewai_integration.py  delegate_task.py  failure_injection.py  kill_switch_modes.py  langchain_integration.py  mcp_integration.py  openai_api_integration.py
founder_mode/: __init__.py  state_authority.py
hummbl-governance/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
hummbl_governance/: __init__.py  _types.py  attest.py  audit_log.py  benchmark.py  capability_fence.py  circuit_breaker.py  compliance_mapper.py  contract_enforcement.py  contract_net.py  convergence_guard.py  coordination_bus.py  corpus_adapter.py  cost_governor.py  cross_repo_contract.py  delegation.py  delegation_context.py  eal.py  errors.py  evolution_lineage.py  failure_modes.py  governance.yml  health_probe.py  identity.py  kill_switch.py  lamport_clock.py  lifecycle.py  output_validator.py  physical_governor.py  reasoning.py  reward_monitor.py  schema_validator.py  statistical_framework.py  stride_mapper.py  tool_audit.py  transition_receipt.py
schemas/: github_surface_map.schema.json  hummbl-init-manifest.schema.json  hummbl-repo-manifest.schema.json
scripts/: __init__.py  agent_toolset_scaffold.py  anvil_git_signing_audit.py  arbiter_audit.py  audit-github-actions.py  build_evidence_validation_report.py  build_wheel_from_sdist.py  check-dependencies.py  check_release_metadata.py  claim_drift.py  count_coverage_rows.py  coverage_ratchet.py  financial_pulse.py  (+14 more)
(+519 files in other folders)
