[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hummbl-governance"
version = "0.4.0"
description = "Governance primitives for AI agent orchestration: kill switch, circuit breaker, cost governor, delegation tokens, audit log, identity registry, schema validation, coordination bus, compliance mapper, and health probes."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
authors = [
    {name = "Reuben Bowlby", email = "reuben@hummbl.io"},
    {name = "HUMMBL, LLC"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
]
keywords = ["governance", "ai", "agents", "kill-switch", "circuit-breaker", "delegation", "audit"]
dependencies = []

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/hummbl-dev/hummbl-governance"
Repository = "https://github.com/hummbl-dev/hummbl-governance"
Issues = "https://github.com/hummbl-dev/hummbl-governance/issues"

[tool.setuptools.packages.find]
include = ["hummbl_governance*"]

[tool.vulture]
exclude = [".venv", "demo", "src"]
min_confidence = 80

[tool.ruff]
line-length = 120
exclude = ["src"]

[tool.ruff.lint]
select = ["E", "F"]

[tool.pytest.ini_options]
testpaths = ["tests"]
